# Ink_backend

./: README.md  docker-compose.yml  pyproject.toml
docker/: init-db.sql
migrations/: add_active_persona_id.sql
src/app/: main.py
src/app/api/: auth.py  autocomplete.py  chat.py  collaboration.py  documents.py  drafts.py  personas.py  users.py
src/app/core/: celery_app.py  error_codes.py  error_handler.py  exceptions.py  logger.py  neo4j_dependency.py  rate_limiter.py  security.py  websocket_manager.py
src/app/db/: database.py  models.py  neo4j_connection.py
src/app/db/repositories/: chat_repository.py  document_repository.py  draft_repository.py  persona_repository.py  user_repository.py
src/app/schemas/: auth.py  autocomplete.py  chat.py  documents.py  drafts.py  error.py  persona.py
src/app/services/: auth_service.py  autocomplete_service.py  document_processor.py  edit_service.py  embedding_service.py  gemini_service.py  prompt_builder.py  qdrant_service.py  rag_service.py  tools_service.py
src/app/workers/: document_tasks.py
